[package]
name = "memodb"
publish = true
edition = "2021"
version = "0.7.0"
readme = "CARGO.md"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "An embedded, in-memory, lock-free, transaction-based, key-value database engine"
repository = "https://github.com/surrealdb/memodb"
homepage = "https://github.com/surrealdb/memodb"
keywords = ["database", "embedded-database", "key-value", "key-value-store", "kv-store"]
categories = ["database-implementations", "data-structures", "embedded"]
license = "Apache-2.0"

[dependencies]
arc-swap = "1.7.1"
bplustree = "0.1.0"
crossbeam-skiplist = "0.1.3"
parking_lot = "0.12.3"
smallvec = "1.14.0"
thiserror = "1.0.58"
