[package]
name = "memodb"
publish = true
edition = "2021"
version = "0.8.0"
readme = "CARGO.md"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "An embedded, in-memory, lock-free, transaction-based, key-value database engine"
repository = "https://github.com/surrealdb/memodb"
homepage = "https://github.com/surrealdb/memodb"
keywords = [
	"database",
	"embedded-database",
	"key-value",
	"key-value-store",
	"kv-store",
]
categories = ["database-implementations", "data-structures", "embedded"]
license = "Apache-2.0"

[dependencies]
arc-swap = "1.7.1"
crossbeam-deque = "0.8.5"
crossbeam-queue = "0.3.12"
crossbeam-skiplist = "0.1.3"
parking_lot = "0.12.3"
smallvec = "1.14.0"
thiserror = "1.0.58"

[dev-dependencies]
rand = "0.9.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "operations"
harness = false
