[package]
name = "surrealmx"
publish = true
edition = "2021"
version = "0.8.0"
readme = "CARGO.md"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "An embedded, in-memory, lock-free, transaction-based, key-value database engine"
repository = "https://github.com/surrealdb/surrealmx"
homepage = "https://github.com/surrealdb/surrealmx"
keywords = [
	"database",
	"embedded-database",
	"key-value",
	"key-value-store",
	"kv-store",
]
categories = ["database-implementations", "data-structures", "embedded"]
license = "Apache-2.0"

[dependencies]
arc-swap = "1.7.1"
bincode = { version = "2.0.1", features = ["serde"] }
crossbeam-deque = "0.8.5"
crossbeam-queue = "0.3.12"
crossbeam-skiplist = "0.1.3"
lz4 = "1.25"
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive", "rc"] }
smallvec = { version = "1.14.0", features = ["serde"] }
thiserror = "1.0.58"
tracing = "0.1.41"

[dev-dependencies]
rand = "0.9.1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[[bench]]
name = "operations"
harness = false
